--- a/Dockerfile-py
+++ b/Dockerfile-py
@@ -1,6 +1,6 @@
 FROM python:3
 
-COPY requirements.txt requirements.txt
+COPY Python/requirements.txt requirements.txt
 COPY Python/ scripts/
 
 RUN pip install --upgrade pip && pip install -r requirements.txt
