--- a/Dockerfile-r
+++ b/Dockerfile-r
@@ -6,5 +6,5 @@ ARG MONGODB_URI=mongodb://cb-data-db
 
 RUN echo "MONGODB_URI=${MONGODB_URI}" >> /home/shiny/.Renviron
 
-ADD requirements.R requirements.R
+ADD R/requirements.R requirements.R
 RUN Rscript requirements.R
