--- a/Dockerfile-r
+++ b/Dockerfile-r
@@ -1,5 +1,7 @@
 FROM jenslaufer/docker-shiny-apps-base:latest
 
+RUN apt-get update && apt-get install -y libproj-dev libgdal-dev
+
 COPY R/apps/ /srv/shiny-server/apps
 
 ARG MONGODB_URI=mongodb://cb-data-db
